--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: custom_field_package
 description: "A new Flutter package project."
 version: 0.0.1
-
+repository: https://github.com/Aritesh/custom_field_uk
 
 environment:
   sdk: ^3.6.0
